--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="static/index.js"></script>
 </head>
 <body>
-<div>hello vue2</div>
+<div>hello vue</div>
 
 <button onclick="submit()">提交</button>
 </body>
